@@ -680,73 +680,69 @@ abstract class Smarty_Internal_TemplateCompilerBase
     }
 
     /**
-     * This method is called from parser to process a text content section
+     * This method is called from parser to process a text content section if strip is enabled
      * - remove text from inheritance child templates as they may generate output
-     * - strip text if strip is enabled
      *
      * @param string $text
      *
-     * @return null|\Smarty_Internal_ParseTree_Text
+     * @return string
      */
     public function processText($text)
     {
-        if ((string)$text != '') {
-            $store = array();
-            $_store = 0;
-            if ($this->parser->strip) {
-                if (strpos($text, '<') !== false) {
-                    // capture html elements not to be messed with
-                    $_offset = 0;
-                    if (preg_match_all(
-                        '#(<script[^>]*>.*?</script[^>]*>)|(<textarea[^>]*>.*?</textarea[^>]*>)|(<pre[^>]*>.*?</pre[^>]*>)#is',
-                        $text,
-                        $matches,
-                        PREG_OFFSET_CAPTURE | PREG_SET_ORDER
-                    )
-                    ) {
-                        foreach ($matches as $match) {
-                            $store[] = $match[ 0 ][ 0 ];
-                            $_length = strlen($match[ 0 ][ 0 ]);
-                            $replace = '@!@SMARTY:' . $_store . ':SMARTY@!@';
-                            $text = substr_replace($text, $replace, $match[ 0 ][ 1 ] - $_offset, $_length);
-                            $_offset += $_length - strlen($replace);
-                            $_store++;
-                        }
-                    }
-                    $expressions = array(// replace multiple spaces between tags by a single space
-                                         '#(:SMARTY@!@|>)[\040\011]+(?=@!@SMARTY:|<)#s'                            => '\1 \2',
-                                         // remove newline between tags
-                                         '#(:SMARTY@!@|>)[\040\011]*[\n]\s*(?=@!@SMARTY:|<)#s'                     => '\1\2',
-                                         // remove multiple spaces between attributes (but not in attribute values!)
-                                         '#(([a-z0-9]\s*=\s*("[^"]*?")|(\'[^\']*?\'))|<[a-z0-9_]+)\s+([a-z/>])#is' => '\1 \5',
-                                         '#>[\040\011]+$#Ss'                                                       => '> ',
-                                         '#>[\040\011]*[\n]\s*$#Ss'                                                => '>',
-                                         $this->stripRegEx                                                         => '',
-                    );
-                    $text = preg_replace(array_keys($expressions), array_values($expressions), $text);
-                    $_offset = 0;
-                    if (preg_match_all(
-                        '#@!@SMARTY:([0-9]+):SMARTY@!@#is',
-                        $text,
-                        $matches,
-                        PREG_OFFSET_CAPTURE | PREG_SET_ORDER
-                    )
-                    ) {
-                        foreach ($matches as $match) {
-                            $_length = strlen($match[ 0 ][ 0 ]);
-                            $replace = $store[ $match[ 1 ][ 0 ] ];
-                            $text = substr_replace($text, $replace, $match[ 0 ][ 1 ] + $_offset, $_length);
-                            $_offset += strlen($replace) - $_length;
-                            $_store++;
-                        }
-                    }
-                } else {
-                    $text = preg_replace($this->stripRegEx, '', $text);
-                }
-            }
-            return new Smarty_Internal_ParseTree_Text($text);
+
+        if (strpos($text, '<') === false) {
+        	return preg_replace($this->stripRegEx, '', $text);
         }
-        return null;
+
+	    $store = array();
+	    $_store = 0;
+
+        // capture html elements not to be messed with
+        $_offset = 0;
+        if (preg_match_all(
+            '#(<script[^>]*>.*?</script[^>]*>)|(<textarea[^>]*>.*?</textarea[^>]*>)|(<pre[^>]*>.*?</pre[^>]*>)#is',
+            $text,
+            $matches,
+            PREG_OFFSET_CAPTURE | PREG_SET_ORDER
+        )
+        ) {
+            foreach ($matches as $match) {
+                $store[] = $match[ 0 ][ 0 ];
+                $_length = strlen($match[ 0 ][ 0 ]);
+                $replace = '@!@SMARTY:' . $_store . ':SMARTY@!@';
+                $text = substr_replace($text, $replace, $match[ 0 ][ 1 ] - $_offset, $_length);
+                $_offset += $_length - strlen($replace);
+                $_store++;
+            }
+        }
+        $expressions = array(// replace multiple spaces between tags by a single space
+                             '#(:SMARTY@!@|>)[\040\011]+(?=@!@SMARTY:|<)#s'                            => '\1 \2',
+                             // remove newline between tags
+                             '#(:SMARTY@!@|>)[\040\011]*[\n]\s*(?=@!@SMARTY:|<)#s'                     => '\1\2',
+                             // remove multiple spaces between attributes (but not in attribute values!)
+                             '#(([a-z0-9]\s*=\s*("[^"]*?")|(\'[^\']*?\'))|<[a-z0-9_]+)\s+([a-z/>])#is' => '\1 \5',
+                             '#>[\040\011]+$#Ss'                                                       => '> ',
+                             '#>[\040\011]*[\n]\s*$#Ss'                                                => '>',
+                             $this->stripRegEx                                                         => '',
+        );
+        $text = preg_replace(array_keys($expressions), array_values($expressions), $text);
+        $_offset = 0;
+        if (preg_match_all(
+            '#@!@SMARTY:([0-9]+):SMARTY@!@#is',
+            $text,
+            $matches,
+            PREG_OFFSET_CAPTURE | PREG_SET_ORDER
+        )
+        ) {
+            foreach ($matches as $match) {
+                $_length = strlen($match[ 0 ][ 0 ]);
+                $replace = $store[ $match[ 1 ][ 0 ] ];
+                $text = substr_replace($text, $replace, $match[ 0 ][ 1 ] + $_offset, $_length);
+                $_offset += strlen($replace) - $_length;
+                $_store++;
+            }
+        }
+        return $text;
     }
 
     /**
