@@ -2169,8 +2169,13 @@ class Smarty_Internal_Templateparser
     // line 255 "../smarty/lexer/smarty_internal_templateparser.y"
     public function yy_r2()
     {
-        $this->current_buffer->append_subtree($this,
-            $this->compiler->processText($this->yystack[ $this->yyidx + 0 ]->minor));
+    	$text = $this->yystack[ $this->yyidx + 0 ]->minor;
+
+	    if ((string)$text == '') {
+	    	$this->current_buffer->append_subtree($this, null);
+	    }
+
+	    $this->current_buffer->append_subtree($this, new Smarty_Internal_ParseTree_Text($text, $this->strip));
     }
 
     // line 259 "../smarty/lexer/smarty_internal_templateparser.y"
